--- a/_includes/base.html
+++ b/_includes/base.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Rupert Parry is a creative technologist, designer and musician with an eye on how emerging tech interacts with human culture.">
+	<meta name="description" content="Rupert Parry is a software developer &
+	product designer with an eye on how emerging tech interacts with human culture.">
 
 	<script src="https://cdn.usefathom.com/script.js" data-site="FWUUKVOB" defer></script>
 
@@ -14,7 +15,7 @@
 	<link rel="stylesheet" href="/assets/css/base.css" />
 	{% if stylesheet %}<link rel="stylesheet" href="/assets/css/{{stylesheet}}.css" />{% endif %}
 
-	<title>Rupert Parry</title>
+	<title>Rupert's world</title>
 </head>
 <body>
 	<header class="page">
