--- a/_includes/base.html
+++ b/_includes/base.html
@@ -8,9 +8,9 @@
 
 	<script src="https://cdn.usefathom.com/script.js" data-site="FWUUKVOB" defer></script>
 
-	<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon-16x16.png">
-	<link rel="shortcut icon" href="/assets/img/favicon.ico">
+	<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/assets/img/favicon/favicon-16x16.png">
+	<link rel="shortcut icon" href="/assets/img/favicon/favicon.ico">
 
 	<link rel="stylesheet" href="/assets/css/base.css" />
 	{% if stylesheet %}<link rel="stylesheet" href="/assets/css/{{stylesheet}}.css" />{% endif %}
@@ -22,5 +22,11 @@
 		<h1>🌏 Rupert's world</h1>
 	</header>
 	{{ content }}
+	<footer>
+		<ul>
+			<li><a href="mailto:rp@rupert.cloud">rp@rupert.cloud</a></li>
+			<li><a href="https://</li>
+		</ul>
+	</footer>
 </body>
 </html>
