--- a/_includes/base.html
+++ b/_includes/base.html
@@ -24,8 +24,8 @@
 	{{ content }}
 	<footer>
 		<ul>
-			<li><a href="mailto:rp@rupert.cloud">rp@rupert.cloud</a></li>
-			<li><a href="https://</li>
+			<li>📮 <a href="mailto:rp@rupert.cloud">rp@rupert.cloud</a></li>
+			<li>🐦 <a href="https://twitter.com/rupert_parry?lang=en">@rupert_parry</a></li>
 		</ul>
 	</footer>
 </body>
