--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -56,7 +56,6 @@ body {
   font-size: 18px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding-bottom: 300px;
 }
 
 header {
@@ -122,4 +121,21 @@ ul.files li:before {
 ul.files a {
   text-decoration: none;
   border-bottom: 1px dotted;
+}
+
+footer {
+  margin-top: 100px;
+  border-top: 1px solid var(--color-body);
+  padding-bottom: 1px;
+}
+
+footer ul {
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+footer li {
+  margin-right: 50px;
 }
