Put my name in the title

--- a/_includes/base.html
+++ b/_includes/base.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="/assets/css/base.css" />
 	{% if stylesheet %}<link rel="stylesheet" href="/assets/css/{{stylesheet}}.css" />{% endif %}
 
-	<title>Rupert's world</title>
+	<title>Rupert's world - the internet home of Rupert Parry</title>
 </head>
 <body>
 	<header class="page">
