--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -26,10 +26,18 @@
   src: url(/assets/fonts/iAWriterQuattroS-BoldItalic.woff2), url(/assets/fonts/iAWriterQuattroS-BoldItalic.woff);
 }
 
+@font-face {
+  font-family: Emoji;
+  font-style: normal;
+  font-weight: normal;
+  src: url(/assets/fonts/NotoEmoji-Bold.ttf);
+}
+
+
 :root {
-  --color-body: #1A1A1A;
+  --color-body: #303030;
   --color-body-alt: #ababab;
-  --color-interaction: #0083c5;
+  --color-interaction: rgb(0, 0, 0);
   --color-bg: #F7F7F7;
 }
 
@@ -53,7 +61,7 @@ body {
   background-color: var(--color-bg);
   color: var(--color-body);
   font-family: "Quattro";
-  font-size: 18px;
+  font-size: 17px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -63,18 +71,30 @@ header {
   padding-bottom: 10px;
 }
 
+.emoji {
+  font-family: Emoji, sans-serif;
+}
+
 .page {
-  max-width: 700px;
+  max-width: 600px;
   margin: 0 auto;
 }
 
 a,
 a:visited {
-  color: var(--color-interaction)
+  color: var(--color-interaction);
 }
 
 h1 {
   font-size: 30px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+#globe-icon {
+  text-align: center;
+  color: blue;
+  font-size: 40px;
 }
 
 h2 {
@@ -114,6 +134,7 @@ ul.files li {
 
 ul.files li:before {
   content: '📄';
+  font-family: Emoji, sans-serif;
   border-bottom: none;
   margin-right: 6px;
 }
