Changed email icon

--- a/_includes/base.html
+++ b/_includes/base.html
@@ -27,7 +27,7 @@
 	{{ content }}
 	<footer>
 		<ul>
-			<li><span class="emoji">📮</span> <a href="mailto:rp@rupert.cloud">rp@rupert.cloud</a></li>
+			<li><span class="emoji">✉️</span> <a href="mailto:rp@rupert.cloud">rp@rupert.cloud</a></li>
 			<li><span class="emoji">🐦</span> <a href="https://twitter.com/rupert_parry?lang=en">@rupert_parry</a></li>
 		</ul>
 	</footer>
